Bug 125550 - The color of the menu changes when opening a change tracked DOCX document saved by MS Word (OpenGL)
Summary: The color of the menu changes when opening a change tracked DOCX document sav...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.3.0.0.alpha1+
Hardware: All Windows (All)
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:6.3.0 target:6.2.5
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2019-05-28 11:15 UTC by NISZ LibreOffice Team
Modified: 2019-06-13 19:21 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
A screenshot showcasing the issue. (92.39 KB, image/png)
2019-05-28 11:15 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2019-05-28 11:15:06 UTC
Description:
This simple document was made with Microsoft Word and contains tracked style change. When the document is opened in the latest LibreOffice master build on Windows (Build ID: 37103a3f008c13dee21d55c8da9e6af807b1997c, Branch:master, Time: 2019-05-27_23:46:36) the menu and its items become blue. 
The same file opens without this issue in a slightly older daily build (Build ID: c3245cfd54f391111afb424867ab483096d9de5e, Branch:master, Time: 2019-05-19_22:59:06), so this seems to be a new regression.

Steps to Reproduce:
    1. Open the following file with the latest LibreOffice master build on Windows: https://bugs.documentfoundation.org/attachment.cgi?id=151732
    2. Check the color of the menu.

Actual Results:
The color of the menu font changes to blue.

Expected Results:
The color of the menu font should stay black.


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 NISZ LibreOffice Team 2019-05-28 11:15:34 UTC
Created attachment 151737 [details]
A screenshot showcasing the issue.
Comment 2 Gabor Kelemen (Collabora) 2019-05-28 11:27:14 UTC
This does not happen when I turn off GL support:

Version: 6.3.0.0.alpha1+
Build ID: 63b39fe87644587210214198fb67d6b3fb3343c5
CPU threads: 4; OS: Windows 6.3; UI render: default; VCL: win; 
TinderBox: Win-x86@42, Branch:master, Time: 2019-05-27_01:42:59
Locale: hu-HU (hu_HU); UI-Language: en-US
Calc: threaded
Comment 3 Xisco Faulí 2019-05-28 12:32:17 UTC
I can't reproduce it in

Version: 6.3.0.0.alpha1+
Build ID: 69b62cfcbd364d7f62142149c2f690104b217ca1
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

nor GTK, nor GEN...

Maybe related to the recent changes dome by Miklos to the menu with OpenGL ?
Comment 4 Durgapriyanka 2019-05-28 15:53:43 UTC
Cannot reproduce the bug in

LibreOffice 3.3.0 
OOO330m19 (Build:6)
tag libreoffice-3.3.0.4
Comment 5 Gabor Kelemen (Collabora) 2019-05-28 18:39:57 UTC
No repro on Linux either, but we saw this to happen reliably on two Win 8.1 machines at the office.
Comment 6 Telesto 2019-05-29 10:29:30 UTC
Repro with
Version: 6.3.0.0.alpha1+
Build ID: 63b39fe87644587210214198fb67d6b3fb3343c5
CPU threads: 4; OS: Windows 6.3; UI render: GL; VCL: win; 
TinderBox: Win-x86@42, Branch:master, Time: 2019-05-27_01:42:59
Locale: it-IT (nl_NL); UI-Language: en-US
Calc: CL

And with
Version: 6.3.0.0.alpha1+
Build ID: 63b39fe87644587210214198fb67d6b3fb3343c5
CPU threads: 4; OS: Windows 6.3; UI render: default; VCL: win; 
TinderBox: Win-x86@42, Branch:master, Time: 2019-05-27_01:42:59
Locale: it-IT (nl_NL); UI-Language: en-US
Calc: CL

but not with
Version: 6.1.0.0.beta2+
Build ID: 22c451df33b733440f24c1feb6380d31240d55e6
CPU threads: 4; OS: Windows 6.3; UI render: default; 
Locale: nl-NL (nl_NL); Calc: CL
Comment 7 Gabor Kelemen (Collabora) 2019-05-30 12:47:25 UTC
Bibisected using bibisect-win32-6.3 to 

https://gerrit.libreoffice.org/plugins/gitiles/core/+/e8d5b8beb5958147235ff955ed38c47b51d860ff 

commit e8d5b8beb5958147235ff955ed38c47b51d860ff [log] 

author
Miklos Vajna <vmiklos@collabora.com> Mon May 20 18:30:08 2019 +0200 

committer
Miklos Vajna <vmiklos@collabora.com> Mon May 20 20:04:27 2019 +0200 

tree d5f0e41bdd1076f46a3f399bbeff28a7f33a2f17 

parent 115ab48f86d4e3c6eede49767df1ee5a82b4ab22 [diff] 
tdf#113714 vcl menu bar window: avoid flicker

Adding Cc: to Miklos Vajna
Comment 8 Miklos Vajna 2019-05-31 08:20:10 UTC
I can reproduce this even without OpenGL, but only on Windows. I'll try to see what's going on.
Comment 9 Commit Notification 2019-05-31 18:21:29 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/42bf893a8479f70d7d8f00e03105ce15e8545f8b%5E%21

tdf#125550 vcl menu bar / floating window: fix text color

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2019-06-13 19:21:51 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/7ae354290af7f3fcd9c5031e437af0037e61e984%5E%21

tdf#125550 vcl menu bar / floating window: fix text color

It will be available in 6.2.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.